--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Boards#edit</h1>
-<p>Find me in app/views/boards/edit.html.erb</p>
+<h1>Edit Board</h1>
+
+<%= render "form" %>
+
+<%= link_to "Back To Board", board_path%>
