--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Boards#show</h1>
-<p>Find me in app/views/boards/show.html.erb</p>
+<h1><%= @board.board_name %></h1>
+
+<%= link_to "Edit Board", edit_board_path(@board) %>
+<%= link_to "Delete Board", @board, method: :delete %>
+
