--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Lists#edit</h1>
-<p>Find me in app/views/lists/edit.html.erb</p>
+<h1>Edit List</h1>
+<%= render "form" %>
+<%= link_to "Back To List", board_list_path%>
