--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
+<h1>Lists</h1>
+
+<%= link_to "List", new_board_list_path %>
+
+<% @lists.each do |list| %>
+  <div>
+    <h3> <%= link_to list.list_name, list %> </h3>
+  </div>
+
+<% end %>
