--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Lists#show</h1>
-<p>Find me in app/views/lists/show.html.erb</p>
+<h1><%= @list.list_name %></h1>
+
+<%= link_to "Edit list", edit_list_path(@list) %>
+<%= link_to "Delete list", @list, method: :delete %>
