--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Tasks#show</h1>
-<p>Find me in app/views/tasks/show.html.erb</p>
+<h1><%= @task.task_name %></h1>
+
+<%= link_to "Edit task", edit_task_path(@task) %>
+<%= link_to "Delete task", @task, method: :delete %>
