Fix bug issues, get new bug issues

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Lists</h1>
 
-<%= link_to "List", new_board_list_path %>
+<%= link_to "Add a List", new_board_list_path %>
 
 <% @lists.each do |list| %>
   <div>
