--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Boards</h1>
 
+  <%= link_to "Create Board", new_board_path, class: "lin_to" %>
+
 <% @boards.each do |board| %>
   <div>
     <h3> <%= link_to board.board_name, board %> </h3>
