--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @list, local: true) do |f| %>
+<%= form_for [@board, @list] do |f| %>
 
   <div class="field"> 
     <%= f.label :name %>
