--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,11 @@
-<h1><%= @list.list_name %></h1>
+<h1><%= @board.name %> - <%= @list.name %></h1>
 
-<%= link_to "Edit list", edit_list_path(@list) %>
-<%= link_to "Delete list", @list, method: :delete %>
+<p><%= @list.name %></p>
+
+
+
+<%= link_to 'Edit list', edit_board_list_path([@board, @list]) %>
+<%= link_to 'Delete list', [@board, @list], method: :delete %>
+<%= link_to 'Back To lists', board_lists_path([@board, @list]) %>
+
+<%= link_to "Tasks", list_tasks_path(@list) %>
