--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @task, local: true) do |f| %>
+<%= form_for [@list, @task] do |f| %>
 
   <div class="field"> 
     <%= f.label :name %>
