--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -9,35 +9,34 @@ body {
   background-color: #009f21;
   color: white;
   font-family: 'Fira Sans', sans-serif;
+  max-width: 100%;
+  height: 900px;
 }
 
 nav {
+  position: fixed;
+  top: 0;
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  max-width: 99%;
+  max-width: 100%;
+  min-width: 100%;
   margin: 0 auto;
   border-bottom: 5px solid #007f11;
+  background-color: #009f21;
+  z-index: 2;
 }
 
-nav img {
-  width: 32px;
-  height: 32px;
-  border-radius: 5px;
+#hidden-div {
+  border: 1px solid black;
+  height: 80px;
+  min-width: 100%;
+  max-width: 100%;
+  margin-top: 80px;
 }
 
-#left-nav {
-  display: flex;
-  justify-content: flex-start;
-  height: 100%; 
-}
-
-#right-nav {
-  display: flex;
-  justify-content: flex-start;
-  height: 100%; 
-}
 
 .lin_to {
   color: #fff;
